salesforce_configs/metadata_configurations/endpoints/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2O Sales Process</fullName>
        <description>Sales Process for B2O</description>
        <isActive>true</isActive>
        <values>
            <fullName>Analyse Prospect</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>Prepare Solution Proposal</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Closed Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Volume</fullName>
        <description>Process for Volume Sales segment</description>
        <isActive>true</isActive>
        <values>
            <fullName>Analyse Prospect</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Not Won</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>Prepare Solution Proposal</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Vlocity Sales Process</fullName>
        <description>Vlocity Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Analyse Prospect</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Not Won</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>Prepare Solution Proposal</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Alert_Reason__c</fullName>
        <description>Displays Alert Reason depending on priority flag:
1.Red Flag (Past due) Close Date Expired
2.Orange Flag (Within 14 days) Close Date Expiring Soon</description>
        <formula>IF(CloseDate &lt; TODAY() &amp;&amp; IF( CASE(telia_opportunity_status__c, &quot;In_Progress&quot;, &quot;true&quot;, &quot;false&quot;) = &quot;true&quot;, TRUE,FALSE), &quot;Close Date Expired&quot;,
IF(CloseDate &lt;= TODAY() + 14 &amp;&amp; IF(CASE(telia_opportunity_status__c, &quot;In_Progress&quot;, &quot;true&quot;, &quot;false&quot;) = &quot;true&quot;,TRUE, FALSE), &quot;Close Date Expiring Soon&quot;,
&quot;&quot;
))</formula>
        <label>Alert Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_To_Start_Date__c</fullName>
        <description>Calculates from creation of a opportunity for when it&apos;s responsibility taken (ex.Customer Service to Digisales) (Created Date to Start Date)</description>
        <formula>LastModifiedDate -  DATETIMEVALUE (  CreatedDate  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created To Start Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_to_Close_Date__c</fullName>
        <description>Calculating from created date to last Modified Data, how long opportunity has been open.</description>
        <formula>LastModifiedDate  -  DATETIMEVALUE ( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created to Close Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fast_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Term__c</fullName>
        <label>Fixed Term Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Billing_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group billing id&apos;s are used to control SAP contract numbers</description>
        <inlineHelpText>Select the correct group billing id for this opportunity</inlineHelpText>
        <label>Group Billing ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>telia_Group_Billing_ID__c.telia_Account__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>telia_Group_Billing_ID__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InCurrentHalfYear__c</fullName>
        <formula>IF(
(MONTH( DATEVALUE( NOW())) &lt; 7 &amp;&amp; MONTH( CloseDate ) &lt; 7) || (MONTH( DATEVALUE( NOW())) &gt; 6 &amp;&amp; MONTH( CloseDate ) &gt; 6),
true,
false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InCurrentHalfYear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Availability_Status__c</fullName>
        <label>Manual Availability Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request Sent</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Charge__c</fullName>
        <label>Monthly Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nomen_Metro_Ethernet_pricing__c</fullName>
        <description>Metro Ethernet pricing data from availability query; Name=ME (Value examples = ME00, ME11, MEV0, MEV1)</description>
        <inlineHelpText>Metro Ethernet pricing data from availability query; Name=ME (Value examples = ME00, ME11, MEV0, MEV1)</inlineHelpText>
        <label>Nomen Metro Ethernet pricing</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomen_Network_operator__c</fullName>
        <description>Network operator data from availability query; Name=Operator (Value examples = Telia, Elisa, DNA)</description>
        <inlineHelpText>Network operator data from availability query; Name=Operator (Value examples = Telia, Elisa, DNA)</inlineHelpText>
        <label>Nomen Network operator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomen_pricing_area__c</fullName>
        <description>Pricing area information received from availability query; Name: Area (Value examples: ACO, Alue10, Haja, TS, Taajama)</description>
        <inlineHelpText>Pricing area information received from availability query; Name: Area (Value examples: ACO, Alue10, Haja, TS, Taajama)</inlineHelpText>
        <label>Nomen pricing area</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomen_pricing_zone__c</fullName>
        <description>Pricing zone data from availability query; Name=Zone (Value examples = DSL10, DSL11, DSLH1, DSLT1)</description>
        <inlineHelpText>Pricing zone data from availability query; Name=Zone (Value examples = DSL10, DSL11, DSLH1, DSLT1)</inlineHelpText>
        <label>Nomen pricing zone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time__c</fullName>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture Oy</fullName>
                </value>
                <value>
                    <fullName>AinaCom Oy</fullName>
                </value>
                <value>
                    <fullName>Aina Group Oyi</fullName>
                </value>
                <value>
                    <fullName>Anvia Oyj</fullName>
                </value>
                <value>
                    <fullName>Atea Finland Oy</fullName>
                </value>
                <value>
                    <fullName>British Telecom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Flag__c</fullName>
        <description>1.Show Alert Flag if Opportunity is on one of the open stages and Expected Close Date is in &quot;The past&quot; COLOR RED
2.Show Alert Flag if Opportunity is on one of the open stages and Expected Close date is within NEXT 14 days COLOR Yellow/Orange</description>
        <formula>IF(CloseDate &lt; TODAY() &amp;&amp; IF( CASE( telia_opportunity_status__c, &quot;In_Progress&quot;, &quot;true&quot;, &quot;false&quot;) = &quot;true&quot;, TRUE,FALSE), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Priority Flag&quot;),
IF(CloseDate &lt;= TODAY() + 14 &amp;&amp; IF( CASE( telia_opportunity_status__c, &quot;In_Progress&quot;, &quot;true&quot;, &quot;false&quot;) = &quot;true&quot;,TRUE, FALSE), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Priority Flag&quot;),
&quot;&quot;
))</formula>
        <inlineHelpText>Indicates opportunity priority</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Solution_Area__c</fullName>
        <label>Product Solution Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access Network</fullName>
                </value>
                <value>
                    <fullName>Wavelength</fullName>
                </value>
                <value>
                    <fullName>Nordic Ethernet</fullName>
                </value>
                <value>
                    <fullName>DSL Operator</fullName>
                </value>
                <value>
                    <fullName>Telia Ethernet</fullName>
                </value>
                <value>
                    <fullName>Mobile Backhaul</fullName>
                </value>
                <value>
                    <fullName>Optical Line</fullName>
                </value>
                <value>
                    <fullName>Open Fiber</fullName>
                </value>
                <value>
                    <fullName>IP Transit</fullName>
                </value>
                <value>
                    <fullName>Telia SDH</fullName>
                </value>
                <value>
                    <fullName>Laitetilapalvelut</fullName>
                </value>
                <value>
                    <fullName>Putkivuokrat</fullName>
                </value>
                <value>
                    <fullName>IP VPN</fullName>
                </value>
                <value>
                    <fullName>TDMoP</fullName>
                </value>
                <value>
                    <fullName>B2B Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profitability__c</fullName>
        <label>Profitability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telia_Domain__c</fullName>
        <defaultValue>&quot;cs85.salesforce.com&quot;</defaultValue>
        <description>Used for CPQ Split Funcionaity</description>
        <label>Telia_Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>cs85.salesforce.com</fullName>
                    <default>true</default>
                    <label>cs85.salesforce.com</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Amount_Total__c</fullName>
        <description>(One Time Total + Recurring Total)</description>
        <formula>vlocity_cmt__RecurringTotal__c+vlocity_cmt__OneTimeTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Field is calculated : One Time Total + Recurring Total) 
Solution values are calculated when solution area is added via Feed/Add Solution Area or when configuring solution via CPQ button.</inlineHelpText>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>telia_B2O_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from B2O opportunity layout to the B2O Business Account&apos;s contact records. Own lookup for the B2O Opportunity is needed since in B2B the contact person for opportunity needs to be linked to the same account the B2B Opportunity is linked to.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>B2O_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Billing Account</description>
        <inlineHelpText>Please enter Billing Account or leave blank.</inlineHelpText>
        <label>Billing Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Billing Address)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Billing_City__c</fullName>
        <formula>IF(ISBLANK(telia_Billing_Account__c), 
Account.BillingCity, 
telia_Billing_Account__r.BillingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Billing_Country__c</fullName>
        <formula>IF(ISBLANK(telia_Billing_Account__c), 
Account.BillingCountry,
telia_Billing_Account__r.BillingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Billing_Pcode__c</fullName>
        <formula>IF(ISBLANK(telia_Billing_Account__c), 
Account.BillingPostalCode, 
telia_Billing_Account__r.BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Billing_Street__c</fullName>
        <formula>IF(ISBLANK(telia_Billing_Account__c), 
Account.BillingStreet, 
telia_Billing_Account__r.BillingStreet)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Business_Segment__c</fullName>
        <formula>TEXT( Account.telia_business_segment__c)</formula>
        <label>Business Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Close_Comment__c</fullName>
        <label>Close Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>telia_Close_Reason__c</fullName>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Relationship</fullName>
                </value>
                <value>
                    <fullName>02 Total solution</fullName>
                </value>
                <value>
                    <fullName>03 Service performance</fullName>
                </value>
                <value>
                    <fullName>04 Technology</fullName>
                </value>
                <value>
                    <fullName>05 Availability</fullName>
                </value>
                <value>
                    <fullName>06 Price</fullName>
                </value>
                <value>
                    <fullName>07 Financing</fullName>
                </value>
                <value>
                    <fullName>08 Other</fullName>
                </value>
                <value>
                    <fullName>09 Customer Postponed</fullName>
                </value>
                <value>
                    <fullName>10 Winning Probability Low</fullName>
                </value>
                <value>
                    <fullName>11 Business Not Feasible</fullName>
                </value>
                <value>
                    <fullName>12 Customer Lost Their Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Competitor__c</fullName>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>AinaCom Oy</fullName>
                </value>
                <value>
                    <fullName>Aina Group Oyj</fullName>
                </value>
                <value>
                    <fullName>Alajärven Puhelinosuuskunta</fullName>
                </value>
                <value>
                    <fullName>Anvia Oyj</fullName>
                </value>
                <value>
                    <fullName>Atea Finland Oy</fullName>
                </value>
                <value>
                    <fullName>British Telecom</fullName>
                </value>
                <value>
                    <fullName>Cable &amp; Wireless</fullName>
                </value>
                <value>
                    <fullName>Canal Digital Finland Oy</fullName>
                </value>
                <value>
                    <fullName>Comptel Oyj</fullName>
                </value>
                <value>
                    <fullName>Datametrix</fullName>
                </value>
                <value>
                    <fullName>Digia Oyj</fullName>
                </value>
                <value>
                    <fullName>DNA Oyj</fullName>
                </value>
                <value>
                    <fullName>Elisa Oyj</fullName>
                </value>
                <value>
                    <fullName>Ementor</fullName>
                </value>
                <value>
                    <fullName>Eurajoen Puhelin Osk</fullName>
                </value>
                <value>
                    <fullName>Finnet-liitto ry</fullName>
                </value>
                <value>
                    <fullName>Fujitsu Finland Oy</fullName>
                </value>
                <value>
                    <fullName>G7 Data Oy</fullName>
                </value>
                <value>
                    <fullName>Genesys</fullName>
                </value>
                <value>
                    <fullName>Globetel Oy</fullName>
                </value>
                <value>
                    <fullName>Hewlett Packard</fullName>
                </value>
                <value>
                    <fullName>Härkätien Puhelin Oy</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Ikaalisten-Parkanon Puhelin Osakeyhtiö</fullName>
                </value>
                <value>
                    <fullName>Interoute Finland Oy</fullName>
                </value>
                <value>
                    <fullName>IRT Finland Oy Ab</fullName>
                </value>
                <value>
                    <fullName>Jakobstadsnejdens Telefon Ab</fullName>
                </value>
                <value>
                    <fullName>Kainuun Puhelinosuuskunta (KPO)</fullName>
                </value>
                <value>
                    <fullName>Karis Telefon Ab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Continuation_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Follow up opportunity is used when opportunity is won or lost and it needs to be checked afterwards</description>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Continuation Sales</relationshipLabel>
        <relationshipName>Continuation_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Create_Continuation_Opportunity__c</fullName>
        <description>This is the dependent picklist, which will appear on Status field quick edit dialogue it the Status = &apos;Close Won&apos;.
This list will also be visible on Edit Opportunity page.</description>
        <label>Create Continuation Sales Opportunity?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#33CC00</color>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#CC0000</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Current_User_Profile_Name__c</fullName>
        <description>Used only for process builder flow Change Opportunity Owner Change</description>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Current User Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Days_Unmodified__c</fullName>
        <description>Traffic lights for Opportunity to determine when opportunity has been last modified.</description>
        <formula>IF(IsClosed, NULL,
IF((TODAY() - DATEVALUE(LastModifiedDate)) &lt; 3, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15), 
IF((TODAY() - DATEVALUE (LastModifiedDate)) &lt; 5, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 15),IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 15))) + &quot; &quot; + TEXT(TODAY () - DATEVALUE(LastModifiedDate)))</formula>
        <label>Days Unmodified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_FYR_book_value__c</fullName>
        <label>FYR Total</label>
        <summarizedField>OpportunityLineItem.telia_FYR_book_value__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>telia_Investment_ID__c</fullName>
        <label>Investment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>telia_Investments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>telia_Is_Continuation_Sales__c</fullName>
        <formula>NOT(ISBLANK(telia_Continuation_Sales__c))</formula>
        <label>Continuation Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>telia_Is_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>telia_Manual_Availability_Check_ID__c</fullName>
        <label>Manual Availability Check ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>telia_Note__c</fullName>
        <description>Telia Note is shown over Continuation Sales-field so that user will select Continuation sales opportunity checkbox if it&apos;s needed</description>
        <label>Note!</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>telia_Opportunity_ID__c</fullName>
        <displayFormat>{YYYY}{MM}{0000000000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>telia_Opportunity_SF_ID__c</fullName>
        <formula>Id</formula>
        <label>Opportunity SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Owner_Name__c</fullName>
        <formula>Owner.FirstName  &amp; &quot; &quot; &amp;  Owner.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Permission_to_Order_Opportunity__c</fullName>
        <description>Permission to Order field related to Power of Attorney Management.</description>
        <label>Permission to Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Price_Source__c</fullName>
        <label>Price Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Book</fullName>
                    <default>true</default>
                    <label>Price Book</label>
                </value>
                <value>
                    <fullName>Pricing Tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Probability__c</fullName>
        <label>Win Probability %</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Quality_Rating_Description__c</fullName>
        <description>Description field for Quality Rating by Source.</description>
        <inlineHelpText>Add description for quality rating.</inlineHelpText>
        <label>Quality Rating Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>telia_Rating__c</fullName>
        <description>Source quality picklist</description>
        <inlineHelpText>Source quality picklist</inlineHelpText>
        <label>Quality Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Related_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Report_Category__c</fullName>
        <description>Categorize the opportunity as Won, Lost, Overdue, Closing(closing this week) or Open</description>
        <formula>IF(IsClosed &amp;&amp; IsWon, &apos;Won&apos;, 
IF(IsClosed &amp;&amp; !IsWon, &apos;Lost&apos;, 
IF(!IsClosed &amp;&amp; CloseDate &lt; TODAY(), &apos;Overdue&apos;, 
IF(!IsClosed &amp;&amp; CloseDate &lt;= TODAY() + (6 - MOD(TODAY() - DATE(1900, 1, 8), 7)),&apos;Closing&apos; ,&apos;Open&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Revenue_Total_Rollup__c</fullName>
        <label>Revenue Total</label>
        <summarizedField>OpportunityLineItem.telia_FYR_opp_value__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.vlocity_cmt__ParentItemId__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>telia_Rollup_For_OLI_One_Time_Total__c</fullName>
        <label>Rollup For OLI One Time Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>telia_Rollup_For_OLI_Recurring_Total__c</fullName>
        <label>Rollup For OLI Recurring Total</label>
        <summarizedField>OpportunityLineItem.Monthly_Recurring_Charge_Total__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>